@@ -42,10 +42,12 @@ Licensed under the MIT License.
       --add-opens com.azure.cosmos/com.azure.cosmos=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.models=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.rx=ALL-UNNAMED
+      --add-opens com.azure.cosmos/com.azure.cosmos.rx=com.fasterxml.jackson.databind
       --add-opens com.azure.cosmos/com.azure.cosmos.rx.proxy=ALL-UNNAMED
 
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.batch=ALL-UNNAMED
+      --add-opens com.azure.cosmos/com.azure.cosmos.implementation.batch=com.fasterxml.jackson.databind
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.caches=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.cpu=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.clienttelemetry=ALL-UNNAMED
@@ -53,6 +55,7 @@ Licensed under the MIT License.
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.directconnectivity.rntbd=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.directconnectivity.TcpServerMock=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.directconnectivity.TcpServerMock.rntbd=ALL-UNNAMED
+      --add-opens com.azure.cosmos/com.azure.cosmos.implementation.directconnectivity.TcpServerMock.rntbd=com.fasterxml.jackson.databind
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.feedranges=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.http=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.patch=ALL-UNNAMED
